# assignments

./: CMakeLists.txt  README.md
config/: useEigen.yaml
data/: data.txt  data2.txt
data/two_image_pose_estimation/: sensor.yaml
examples/: test1.cpp  test2.cpp  test3.cpp  useOpencv.cpp
include/: useEigen.h
src/: useEigen.cpp
